--- a/_posts/2014-05-26-graph.textile
+++ b/_posts/2014-05-26-graph.textile
@@ -9,7 +9,7 @@ date: 2014-05-26 13:19:09
 
 圖大致分兩類：地圖與查找樹。前者多爲有權圖，需要考慮邊的權重；後者多爲樹，重點在於整棵樹的拓撲結構。
 
-地圖上常見的需求是找到一棵滿足需求的通路。最廣泛使用的思路是，使用一個含有節點的集合，每次我們從集合中取出一個點，然後把所有與該節點相鄰的節點推入集合。不同的圖搜索算法區別即在於使用的集合不同。最簡單的 BFS 和 DFS 分別使用隊列與棧。對有權圖則可以使用優先隊列，將從起點至該點的最低成本作爲節點的權重推入隊列，即構成了可以保證得到最優解的 Uniform Cost。在優先隊列的基礎上引入 Heuristic，估計每個點到重點的距離作爲權重相加，即構成了可以提高效率的 A*。如果採用隨機隊列，則可以用於生成迷宮。
+地圖上常見的需求是找到一棵滿足需求的通路。最廣泛使用的思路是，使用一個含有節點的集合，每次我們從集合中取出一個點，然後把所有與該節點相鄰的節點推入集合。不同的圖搜索算法區別即在於使用的集合不同。最簡單的 BFS 和 DFS 分別使用隊列與棧。對有權圖則可以使用優先隊列，將從起點至該點的最低成本作爲節點的權重推入隊列，即構成了可以保證得到最優解的 Uniform Cost。在優先隊列的基礎上引入 Heuristic，估計每個點到終點的距離作爲權重相加，即構成了可以提高效率的 A*。如果採用隨機隊列，則可以用於生成迷宮。
 
 樹往往不關注邊，而是在節點內通過指針或引用指向其它節點以示相鄰關係。
 
