--- a/_posts/2014-07-13-sem.textile
+++ b/_posts/2014-07-13-sem.textile
@@ -7,7 +7,7 @@ date: 2014-07-13 03:44:46
 
 這個寒假一過，離畢業就只有一年了。據說我校是最後一個學期結束之後再隔半年舉辦畢業典禮，換言之穿學士服還是在夏天。
 
-UNSW 的 CS 課程編排還是有點問題。例如 2911 這種神神叨叨的必修課，OOP 和 Java 一起講倒是無所謂，拿別人寫得課本跟自己寫得一樣教，筆試居然默寫設計模式那一套還手寫 Java 代碼。去年被 2121 搞得印堂發黑 Java 沒認真看居然掛掉了，噁心的是 CS 許多專業課依賴這門水了吧唧的必修課。拖到今年才過所以能選的專業課就很受限制。不過還好 CS 選課自由度高，只規定了學分，至於什麼時候修什麼課，除了依賴關係倒也沒什麼限制。
+UNSW 的 CS 課程編排還是有點問題。例如 <abbr title="Engineering Design in Computing">2911</abbr> 這種神神叨叨的必修課，OOP 和 Java 一起講倒是無所謂，拿別人寫得課本跟自己寫得一樣教，筆試居然默寫設計模式那一套還手寫 Java 代碼。去年被 <abbr title="Microprocessors and Interfacing">2121</abbr> 搞得印堂發黑 Java 沒認真看居然掛掉了，噁心的是 CS 許多專業課依賴這門水了吧唧的必修課，拖到今年才過所以能選的專業課就很受限制。不過還好 CS 選課自由度高，只規定了學分，至於什麼時候修什麼課，除了依賴關係倒也沒什麼限制。
 
 在認清我不是學霸之後反而沒什麼壓力了，雖然選課時依然以爲自己什麼都能砍下來，但腦子清醒之後還是換成了簡單的課。雖然我校沒必修三大浪漫，但反正我連 HCI 和數據庫都退掉然後又去搞了 OS，去幹 PL 麼隨便啊。
 
